--- a/client/src/components/NavBar/NavBar.module.css
+++ b/client/src/components/NavBar/NavBar.module.css
@@ -1,7 +1,7 @@
 .nav_container {
     background-color: rgb(226, 19, 19);
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     flex-direction: row;
     align-items: center;
 }
@@ -22,15 +22,6 @@
 
 .logo:hover {
     animation: bounce 1s infinite;
-}
-
-.list {
-    display: flex;
-    justify-content: space-between;
-}
-
-.search_container {
-    background-color: blueviolet;
 }
 
 @keyframes bounce{
